------------------------------------------------------------------------
r1565 | gaser | 2020-02-13 10:57:35

Changed paths:
M       CHANGES.txt
M       cat_conf_ROI.m
M       cat_conf_stools.m
M       cat_defaults.m
MM      cat_io_send_to_server.m
M       cat_run.m
M       templates_1.50mm/lpba40.txt
M       use_of_external_software.txt

(1) Changed: Updated license information for atlases and added printing of
    licene information for LPBA40 and Hammers atlas.
(2) Changed: Updated defaults for atlases.
(3) Changed: Recompiled CAT-binaries because of error in CAT_3dVol2Surf for
    equi-volume mapping.
------------------------------------------------------------------------
r1564 | gaser | 2020-02-11 17:10:56 +0100 (Di, 11 Feb 2020) | 10 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_ROI.m
M       html/cat.html
 M      templates_surfaces/mesh.inflated.freesurfer.gii
 M      templates_surfaces_32k/mesh.inflated.freesurfer.gii

Fixed: Typos...

------------------------------------------------------------------------
r1563 | gaser | 2020-02-11 17:00:46 +0100 (Di, 11 Feb 2020) | 23 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       Makefile
M       cat12.m
M       cat_install_tfce.m
A       cat_io_send_to_server.m
M       cat_main_reportfig.m
M       cat_run.m
M       cat_run_job.m
M       cat_run_newcatch.m
M       cat_stat_confplot_spm.m
M       cat_update.m
M       html/cat.html
M       html/cat_statistics.html

1. Changed: Updated ip-address for piwik server and cat12-files.
2. Changed: Added new function to send information to piwik-server.
3. Changed: Now, only the number of processed files are sent to piwik server.
4. Fixed: Plot for parameter estimates in cat_stat_confplot_spm.m was falsly 
   limited to two effects.


------------------------------------------------------------------------
r1562 | dahnke | 2020-02-11 14:53:30 +0100 (Di, 11 Feb 2020) | 37 lines

Changed paths:
M       CHANGES.txt