@@ -1,5 +1,14 @@
 ------------------------------------------------------------------------
-r1565 | gaser | 2020-02-13 10:57:35
+r1566 | gaser | 2020-02-13 11:25:02
+
+Changed paths:
+M       CHANGES.txt
+M       cat_surf_vol2surf.m
+
+Fixed: If only one step is defined for volume mapping force use of "max" as 
+sampling function.
+------------------------------------------------------------------------
+r1565 | gaser | 2020-02-13 10:58:08 +0100 (Do, 13 Feb 2020) | 16 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -16,6 +25,7 @@ M       use_of_external_software.txt
 (2) Changed: Updated defaults for atlases.
 (3) Changed: Recompiled CAT-binaries because of error in CAT_3dVol2Surf for
     equi-volume mapping.
+
 ------------------------------------------------------------------------
 r1564 | gaser | 2020-02-11 17:10:56 +0100 (Di, 11 Feb 2020) | 10 lines
 
